// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="span"
  style={Object {}}
>
  <div>
    content
  </div>
</div>
`;

exports[`rendering renders correctly with complex props 1`] = `
<div
  className="span"
  id="my-grid-span"
  style={
    Object {
      "--rui-local-column-span-md": 1,
      "--rui-local-column-span-xs": 2,
      "--rui-local-row-span-md": 4,
      "--rui-local-row-span-xs": 3,
    }
  }
>
  <div>
    content
  </div>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="span"
  style={Object {}}
>
  <div>
    content 1
  </div>
  <div>
    content 2
  </div>
  <div>
    content 3
  </div>
</div>
`;

exports[`rendering renders correctly with no children 1`] = `""`;

exports[`rendering renders correctly with simple props 1`] = `
<div
  className="span"
  id="my-grid-span"
  style={
    Object {
      "--rui-local-column-span-xs": 2,
      "--rui-local-row-span-xs": 3,
    }
  }
>
  <div>
    content
  </div>
</div>
`;
